error.txt
C:\Users\yocha\Downloads\NAMMA MART\DO NOT DELETE THIS ( YOCHAN)\DO NOT DELETE THIS ( YOCHAN)\admin.js:1470
    const settingsView = document.getElementById('settings-view');
          ^

SyntaxError: Identifier 'settingsView' has already been declared
    at wrapSafe (node:internal/modules/cjs/loader:1735:18)
    at checkSyntax (node:internal/main/check_syntax:76:3)

Node.js v24.13.1
